--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,9 @@
   <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
-
-      <app-menu-principal></app-menu-principal>
+      <div>
+        <app-menu-principal></app-menu-principal>        
+      </div>
 
     </section>
     <!-- /.sidebar -->
