--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,24 @@
 .main-container{
   margin-top: 40px;
-  background-color: #000!important;
+}
+
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation-name: fadeIn;
 }
