Maquetado Buscar Cliente

--- a/src/app/components/shared/menu-principal/menu-principal.component.html
+++ b/src/app/components/shared/menu-principal/menu-principal.component.html
@@ -7,6 +7,11 @@
     </a>
   </li>
   <li class="treeview" routerLinkActive = "active">
+    <a [routerLink]="['/seleccionar-cliente']">
+      <i class="fa fa-th-list" aria-hidden="true"></i> <span>Seleccionar Cliente</span>
+    </a>
+  </li>
+  <li class="treeview" routerLinkActive = "active">
     <a [routerLink]="['/consulta-ruc']">
       <i class="ion-person"></i> <span>Consultar Contribuyente</span>
     </a>
