Agregado login y exigencia de logueo en componentes

--- a/src/app/components/main/login/login.component.html
+++ b/src/app/components/main/login/login.component.html
@@ -2,6 +2,12 @@
   <div class="col-md-10 top-20">
     <h3>{{title}}</h3>
 
+    <div class="identity-alert alert alert-success" *ngIf="identity && identity.sub">
+      Te has identificado correctamente! Bienvenido {{identity.email}}
+    </div>
+    <div class="identity-alert alert alert-danger" *ngIf="identity && identity.data">
+      Identificación fallida!!
+    </div>
     <form #loginForm="ngForm"
           (ngSubmit)="onSubmit()"
           class="col-md-7 no-padding"
