--- a/src/app/components/shared/menu-principal/menu-principal.component.html
+++ b/src/app/components/shared/menu-principal/menu-principal.component.html
@@ -30,7 +30,7 @@
     </a>
   </li>
 
-  <jqxNavigationBar #navigationBarReference
+  <!-- <jqxNavigationBar #navigationBarReference
                     class="treeview"
 
                     [expandMode]="'toggle'">
@@ -56,6 +56,6 @@
         <li>1983 Domain Name System (DNS)</li>
       </ul>
     </div>
-  </jqxNavigationBar>
+  </jqxNavigationBar> -->
 
 </ul>
