--- a/src/app/components/cliente/cliente-lista/cliente-lista.component.html
+++ b/src/app/components/cliente/cliente-lista/cliente-lista.component.html
@@ -44,9 +44,21 @@
 
             </div>
 
+            <!-- Alert Eliminado -->
+            <div class="identity-alert alert alert-success" *ngIf="eliminado">
+              Cliente eliminado exitosamente!!
+            </div>
+
+            <!-- loader -->
+            <div class="text-center" *ngIf="loading==true">
+              <img src="../../../assets/img/ripple.gif" alt="loader">
+
+            </div>
+
+
             <!-- /.box-header -->
             <div class="box-body">
-              <table id="example1" class="table table-bordered table-striped table-sm" *ngIf="clientes">
+              <table id="example1" class="table table-bordered table-striped table-sm" *ngIf="clientes && loading==false">
                 <thead>
                 <tr>
                   <th class="text-center">RUC</th>
@@ -65,13 +77,15 @@
                       <a [routerLink]="['../editar',cliente.id]"><i class="fa fa-pencil" aria-hidden="true"></i></a>
                     </td>
                     <td class="text-center">
-                      <i class="fa fa-trash" aria-hidden="true"></i>
+                      <a (click)="eliminarCliente(cliente.id)"><i class="fa fa-trash" aria-hidden="true"></i></a>
                     </td>
                   </tr>
+
 
                 </tbody>
 
               </table>
+
 
               <div class="row top-20">
                 <div class="col-md-12">
