--- a/src/app/components/cliente/cliente-detalle/cliente-detalle.component.html
+++ b/src/app/components/cliente/cliente-detalle/cliente-detalle.component.html
@@ -23,125 +23,52 @@
 
           </div>
           <!-- /.box-header -->
-          <div class="box-body no-padding">
+          <div class="box-body">
             <div class="row">
-              <div class="col-md-11 col-sm-8">
+              <div class="col-md-12">
                 <div class="pad">
 
-                  <form (ngSubmit)="actualizarCliente()" #forma="ngForm" novalidate="">
-
-                    <div class="form-group row">
-                      <label class="col-3 col-form-label">RUC</label>
-                      <div class="col-6">
-                        <input class="form-control"
-                        type="text"
-                        name="ruc"
-                        [(ngModel)]="cliente.ruc"
-                        (blur)="getDV()"
-                        placeholder="RUC"
-                        required>
-                        <!-- <div *ngIf="apellido.errors?.required">Este campo es requerido</div> -->
-                      </div>
-                      <label class="col-1 col-form-label">DV</label>
-                      <div class="col-2">
-                        <input class="form-control"
-                        type="text"
-                        name="dv"
-                        [(ngModel)]="cliente.dv"
-                        placeholder="DV"
-                        required>
-                        <!-- <div *ngIf="apellido.errors?.required">Este campo es requerido</div> -->
-                      </div>
-                    </div>
-
-                    <div class="form-group row">
-                      <label class="col-3 col-form-label">Nombres</label>
-                      <div class="col-9">
-
-                        <input class="form-control"
-                        type="text"
-                        name="nombres"
-                        [(ngModel)]="cliente.nombres"
-                        placeholder="nombres o denominación social"
-                        required>
-                        <!-- <div *ngIf="apellido.errors?.required">Este campo es requerido</div> -->
-                      </div>
-                    </div>
-
-                    <div class="form-group row">
-                      <label class="col-3 col-form-label">Apellido Paterno</label>
-                      <div class="col-9">
-
-                        <input class="form-control"
-                        type="text"
-                        name="ape1"
-                        [(ngModel)]="cliente.ape1"
-                        placeholder="apellido paterno"
-                        >
-                        <!-- <div *ngIf="apellido.errors?.required">Este campo es requerido</div> -->
-                      </div>
-                    </div>
-
-                    <div class="form-group row">
-                      <label class="col-3 col-form-label">Apellido Materno</label>
-                      <div class="col-9">
-
-                        <input class="form-control"
-                        type="text"
-                        name="ape2"
-                        [(ngModel)]="cliente.ape2"
-                        placeholder="apellido materno"
-                        >
-                        <!-- <div *ngIf="apellido.errors?.required">Este campo es requerido</div> -->
-                      </div>
-                    </div>
-
-                    <div class="form-group row">
-                      <label class="col-3 col-form-label">Estado</label>
-                      <div class="col-9">
-
-                        <select class="form-control"
-                                name="estado"
-                                [(ngModel)]="cliente.estado"
-                                >
-                          <option value="activo">ACTIVO</option>
-                          <option value="suspendido">SUSPENDIDO</option>
-                          <option value="cancelado">CANCELADO</option>
-
-                        </select>
-                        <!-- <div *ngIf="apellido.errors?.required">Este campo es requerido</div> -->
-                      </div>
-                    </div>
-
-                    <div class="form-group row">
-                      <label class="col-3 col-form-label">&nbsp;</label>
-                      <div class="input-group col-md-4">
-                        <button [disabled]="!forma.valid"
-                        type="submit"
-                        class="btn btn-outline-primary">
-                        <i class="fa fa-save" aria-hidden="true"></i>
-                        Guardar
-                      </button>
-                    </div>
-
-                    <div class="input-group col-md-4">
-                      <button
-                      type="button"
-                      [routerLink]="['../']"
-                      class="btn btn-outline-success pull-right">
-                        <i class="fa fa-save" aria-hidden="true"></i>
-                        Volver
-                      </button>
+                  <div class="form-group row">
+                    <label class="col-3 font-weight-bold">RUC - DV:</label>
+                    <div class="col-9">
+                      {{cliente.ruc}} - {{cliente.dv}}
                     </div>
                   </div>
 
-
-                </form>
+                  <div class="form-group row">
+                    <label class="col-3 font-weight-bold">Estado:</label>
+                    <div class="col-9 text-uppercase">
+                      {{cliente.estado}}
+                    </div>
+                  </div>
 
               </div>
-            </div>
 
+            </div>
           </div>
+
+          <hr>
+
+          <div class="row">
+            <div class="col-md-12">
+              <button
+              type="button"
+              [routerLink]="['../']"
+              class="btn btn-success">
+                <i class="fa fa-reply" aria-hidden="true"></i>
+                Volver
+              </button>
+
+              <button
+              type="button"
+              [routerLink]="['/cliente/editar',cliente.id]"
+              class="btn btn-warning pull-right">
+                <i class="fa fa-pencil" aria-hidden="true"></i>
+                Editar
+              </button>
+            </div>
+          </div>
+
           <!-- /.row -->
         </div>
         <!-- /.box-body -->
