--- a/src/app/components/shared/menu-principal/menu-principal.component.html
+++ b/src/app/components/shared/menu-principal/menu-principal.component.html
@@ -25,7 +25,7 @@
     </a>
   </li>
   <li class="treeview" routerLinkActive = "active">
-    <a [routerLink]="['/factura']">
+    <a [routerLink]="['/factura']" target=_blank>
       <i class="ion-document-text"></i> <span>Facturas</span>
     </a>
   </li>
